prod/other-ingress/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana-ovh.radiantcommons.com`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
          namespace: monitoring
  tls:
    secretName: rc-com-tls
